--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My Site!</title>
 </head>
 <body>
-    Welcome to my GitHub Pages website!
+    <h1>Welcome to my GitHub Pages website!</h1>
 </body>
 </html>
